moved diffstub logic to library with header

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -10,6 +10,7 @@
                 "-Wall",
                 "-g",
                 "${file}",
+                "ngx_diffstub_internal.cpp",
                 "-o",
                 "${fileDirname}/diffstub"
             ],
