Migrated XMLElement to external class

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -10,6 +10,7 @@
                 "-Wall",
                 "-g",
                 "${file}",
+                "diffstub_xml_node.cpp",
                 "ngx_diffstub_internal.cpp",
                 "-o",
                 "${fileDirname}/diffstub"
