initial patchLocation and resulting patch integration

--- a/config
+++ b/config
@@ -2,6 +2,7 @@ ngx_addon_name=ngx_http_diffstub_module
 DIFFSTUB_SRCS="                                               \
               $ngx_addon_dir/ngx_http_diffstub_module.cpp     \
               $ngx_addon_dir/ngx_diffstub_internal.cpp        \
+              $ngx_addon_dir/diffstub_xml_node.cpp        \
               "
 
 if test -n "$ngx_module_link"; then
